301folder-hiralabs/psoc student pack/lab exercise/psoc_intro/lab1.cydsn/BUILD.log
--------------- Build Started: 08/01/2023 14:06:25 Project: lab1, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:26:5: error: 'Timer_1_Start' undeclared (first use in this function)
     Timer_1_Start
     ^
main.c:26:5: note: each undeclared identifier is reported only once for each function it appears in
main.c:29:5: error: expected ';' before 'for'
     for(;;)
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 08/01/2023 14:06:26 ---------------
